Fix HTML structure and add language toggle functionality

--- a/404.html
+++ b/404.html
@@ -256,7 +256,7 @@
         </div>
 
         <div class="button-group">
-            <a href="/" class="btn btn-primary" id="home-btn">الرجوع للرئيسية</a>
+            <a href="https://mohamed25412.github.io/2AC-College2" class="btn btn-primary" id="home-btn">الرجوع للرئيسية</a>
             <a href="https://wa.me/212715657921" class="btn btn-secondary" id="contact-btn">اتصل بنا</a>
         </div>
     </div>
@@ -314,5 +314,6 @@
     </script>
 
 </body>
+
 
 </html>
