Fix HTML encoding issues in index.html

--- a/index.html
+++ b/index.html
@@ -211,6 +211,14 @@
             <img src="Screenshot_20260219-061342.png" alt="S2">
             <p id="s2-t">GPA</p>
         </div>
+        <div class="screen-card">
+            <img src="Screenshot_20260220-054007.png" alt="S3">
+            <p id="s3-t">Exercices</p>
+        </div>
+        <div class="screen-card">
+            <img src="Screenshot_20260220-054019.png" alt="S4">
+            <p id="s4-t">devoir</p>
+        </div>
     </div>
 
     <div class="contact-section">
@@ -241,7 +249,7 @@
             f2t: "Suivi Progrès", f2d: "Des quiz pour tester votre niveau après chaque leçon.",
             f3t: "Gratuit", f3d: "Toutes les ressources sont gratuites à 100%.",
             previewH: "Aperçu",
-            s1: "Accueil", s2: "Cours", s3: "Examens",
+            s1: "Accueil", s2: "Cours", s3: "Exercices", s4: "Devoirs",
             contactH: "Avez-vous des questions ?",
             contactP: "Contactez l'équipe de support technique."
         },
@@ -257,7 +265,7 @@
             f2t: "تتبع التقدم", f2d: "تمارين واختبارات لقياس مستواك الدراسي.",
             f3t: "مجاني بالكامل", f3d: "جميع الدروس والتمارين متاحة مجاناً للجميع.",
             previewH: "معاينة التطبيق",
-            s1: "الرئيسية", s2: "الدروس", s3: "الامتحانات",
+            s1: "الرئيسية", s2: "الدروس",s3:"التمارين", s4: "الواجبات",
             contactH: "هل لديك أي استفسار؟",
             contactP: "تواصل مع فريق الدعم الفني مباشرة."
         }
