Refactor index.html for improved layout and features
Updated the HTML structure and styles for the 2AC Collège application download page, including language toggle functionality and feature descriptions.

--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="icon" href="app-ico.png" type="image/png">
     <style>
         :root {
-            --primary: #1e293b;
+            --primary: #2e65be;
             --accent: #3b82f6;
             --whatsapp: #25d366;
             --telegram: #0088cc;
@@ -41,7 +41,7 @@
 
         /* القسم العلوي */
         .hero {
-            background: linear-gradient(135deg, #1e293b 0%, #334155 100%);
+            background: linear-gradient(135deg, #1e293b 0%, #006aff 100%);
             color: white;
             padding: 80px 20px;
             text-align: center;
@@ -177,8 +177,8 @@
     <div class="download-container">
         <h2 id="ready">Téléchargement</h2>
         <div class="btn-group">
-            <a href="2ac.apk" class="download-btn android" id="btn-android">Android (.APK)</a>
-            <a href="2ac.exe" class="download-btn windows" id="btn-windows">Windows (.EXE)</a>
+            <a href="2ac-apk.html" class="download-btn android" id="btn-android">Android (.APK)</a>
+            <a href="2ac-exe.html" class="download-btn windows" id="btn-windows">Windows (.EXE)</a>
         </div>
     </div>
 
