--- a/2ac-apk.html
+++ b/2ac-apk.html
@@ -765,10 +765,10 @@
             <p id="contact-desc">تواصل مع فريق الدعم الفني للمساعدة الفورية</p>
             <div class="contact-btns">
                 <a href="https://wa.me/212715657921" class="c-btn whatsapp" id="whatsapp-btn">
-                    <span>💬</span> WhatsApp
+                    <span>WhatsApp</span> 
                 </a>
                 <a href="https://t.me/moha25412" class="c-btn telegram" id="telegram-btn">
-                    <span>✈️</span> Telegram
+                    <span>Telegram</span> 
                 </a>
             </div>
         </div>
@@ -846,8 +846,8 @@
                 v28f3: "Corrections générales",
                 contactTitle: "Rencontrez un Problème?",
                 contactDesc: "Contactez notre équipe de support pour une aide immédiate",
-                whatsappBtn: "💬 WhatsApp",
-                telegramBtn: "✈️ Telegram",
+                whatsappBtn: "WhatsApp",
+                telegramBtn: "Telegram",
                 footerText: "&copy; 2026 - 2AC Collège Team | Application éducative avancée",
                 btn: "العربية"
             },
@@ -917,8 +917,8 @@
                 v28f3: "إصلاحات عامة",
                 contactTitle: "هل تواجه مشكلة في التحميل؟",
                 contactDesc: "تواصل مع فريق الدعم الفني للمساعدة الفورية",
-                whatsappBtn: "💬 WhatsApp",
-                telegramBtn: "✈️ Telegram",
+                whatsappBtn: "WhatsApp",
+                telegramBtn: "Telegram",
                 footerText: "&copy; 2026 - 2AC Collège Team | تطبيق تعليمي متقدم",
                 btn: "Français"
             }
@@ -999,8 +999,8 @@
             document.getElementById('v-2-8-f3').innerText = langData.v28f3;
             document.getElementById('contact-title').innerText = langData.contactTitle;
             document.getElementById('contact-desc').innerText = langData.contactDesc;
-            document.getElementById('whatsapp-btn').innerHTML = `<span>💬</span> ${langData.whatsappBtn.split(' ').slice(1).join(' ')}`;
-            document.getElementById('telegram-btn').innerHTML = `<span>✈️</span> ${langData.telegramBtn.split(' ').slice(1).join(' ')}`;
+            document.getElementById('whatsapp-btn').innerHTML = `<span>whatsapp</span> ${langData.whatsappBtn.split(' ').slice(1).join(' ')}`;
+            document.getElementById('telegram-btn').innerHTML = `<span>telegram</span> ${langData.telegramBtn.split(' ').slice(1).join(' ')}`;
             document.getElementById('footer-text').innerHTML = langData.footerText;
         }
 
