--- a/index.html
+++ b/index.html
@@ -579,6 +579,32 @@
         .direct-apk {
             animation: glow 3s infinite;
         }
+        .btn-help-center {
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            gap: 12px;
+            width: 100%;
+            max-width: 320px; /* نفس عرض أزرار التحميل */
+            padding: 16px;
+            border-radius: 20px;
+            text-decoration: none;
+            color: white;
+            font-weight: bold;
+            font-family: 'Cairo', sans-serif;
+            /* تدرج بنفسجي نيون مطابق للصورة */
+            background: linear-gradient(45deg, #00d2ff, #7000ff);
+            box-shadow: 0 0 15px rgba(112, 0, 255, 0.4);
+            transition: 0.3s cubic-bezier(0.175, 0.885, 0.32, 1.275);
+        }
+
+        .btn-help-center:active {
+            transform: scale(0.95);
+        }
+
+        .btn-help-center i {
+            font-size: 1.4rem;
+        }
     </style>
 </head>
 
@@ -617,6 +643,12 @@
                     </div>
                 </a>
 
+            </div>
+            <div style="display: flex; justify-content: center; width: 100%; margin-top: 20px;">
+                <a href="help.html" class="btn-help-center" data-aos="fade-up" data-aos-delay="400">
+                    <i class="fas fa-question-circle"></i>
+                    <span>مركز المساعدة</span>
+                </a>
             </div>
         </section>
     </div>
